--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add" />
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/notes.js"></script>
+    <script src="js/addNotes.js"></script>
+    <script src="js/viewNotes.js"></script>
+    <!-- <script src="js/replace"></script> -->
+    <!-- <script src="js/replace"></script> -->
 </head>
 
 <body onload="viewNotes()">
