--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add" />
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/addNotes.js"></script>
+    <script src="js/deleteNotes.js"></script>
     <script src="js/viewNotes.js"></script>
     <!-- <script src="js/replace"></script> -->
     <!-- <script src="js/replace"></script> -->
