Fixed a little css

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/addNotes.js"></script>
     <script src="js/deleteNotes.js"></script>
@@ -36,7 +36,7 @@
             <!-- Button Column -->
             <div class="col-md-2 d-flex align-items-start">
                 <button type="button" class="btn btn-secondary big-button mt-4" data-toggle="modal" data-target="#notesModal">
-                    <span class="material-symbols-outlined big-icon">add</span>
+                    <span class="material-icons big-icon">add</span>
                 </button>
             </div>
             
