--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <script src="js/deleteNotes.js"></script>
     <script src="js/editNotes.js"></script>
     <script src="js/viewNotes.js"></script>
+    <!-- <script src="js/replace"></script> -->
+    <!-- <script src="js/replace"></script> -->
 </head>
 
 <body onload="viewNotes()">
