--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,18 @@
 
     <!-- Main Container with Button -->
     <div class="container mt-5">
+        <!-- Filter Dropdown -->
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <select id="priorityFilter" class="form-control" onchange="filterNotes()">
+                    <option value="all">All Priorities</option>
+                    <option value="extreme-priority">Extreme Priority</option>
+                    <option value="high-priority">High Priority</option>
+                    <option value="medium-priority">Medium Priority</option>
+                    <option value="low-priority">Low Priority</option>
+                </select>
+            </div>
+        </div>
         <div class="row">
             <!-- Button Column -->
             <div class="col-md-2 d-flex align-items-start">
