--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/images/logo for tab.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Dose</title>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
